# rcmc

./: README.md  build_all.sh  config_default.mk
doc/: riscv_fgmp_extension.md
eval/2017nocs/: .gitignore  extract_data.sh
eval/2017nocs/raw/: .gitignore  README  download_netrace.sh  run_netrace.sh  run_patterns.sh  run_quartus.sh
eval/2017nocs/scripts/: area.awk  bypass.awk  bypass_area.awk  (+9 more)
fpga/: README.md
fpga/GHDL_PNOO/: .gitignore  CMakeLists.txt  README  configure.sh  run.sh  run_tests.sh
fpga/GHDL_PNOO/src/: .gitignore  NetworkInterfaceRecv.vhd  clock.vhd  d_stage.vhd  f_stage.vhd  flit_buffer.vhd  libeu.vhd  libproc.vhd  m_stage.vhd  nocunit.vhd  pnoo_node_double_corner.vhd  pnoo_node_drr.vhd  pnoo_node_sort.vhd  top_level.vhd
fpga/GHDL_PNOO/tests/: CMakeLists.txt
fpga/GHDL_PNOO/tests/src/: minimal.ld  test_suite.h  test_suite.s
fpga/GHDL_PNOO/tests/src/tests/: barrier.c  barrier_1.c  barrier_2.c  barrier_3.c  barrier_4.c  barrier_5.c  barrier_6.c  barrier_7.c  barrier_8.c  barrier_9.c  broadcast_1.c  broadcast_2.c  broadcast_3.c  broadcast_4.c  broadcast_5.c  broadcast_6.c  chain.c  chain_block.c  chain_delayed.c  data_stream_1.c  data_stream_2.c  flooding_1.c  flooding_2.c  flooding_3.c  flooding_4.c  pimp_branch.c  send.c  send_block.c  srdy.c  srdy_release.c
fpga/altera/: .gitignore  PNOO.qpf  PNOO.qsf  README
fpga/core1/: config.sh  gen_constants.sh  gen_ghdl.sh  gen_noc.sh
fpga/core1_4x4_modelsim/: .gitignore  DE2_70.qsf  DE2_70_basic.sdc  LibNode.vhd  NoC.vhd  NoC_5x5.vhd  Node.vhd  NodeTest.vhd  TestCore.vhd  TopLevel.vhd  constants.vhd  cpu_top.vhd  csrfile.vhd  dmem.cmp  dmem.qip  dmem.vhd  e_stage.vhd  m_stage.vhd  nocunit.vhd  regfile_ram.cmp  regfile_ram.qip  regfile_ram.vhd  riscv.qpf  riscv.qsf  riscv_assignment_defaults.qdf  riscv_nativelink_simulation.rpt
fpga/core2/: config.sh  gen_ghdl.sh  gen_noc.sh
fpga/pnoo/: config.sh  gen_constants.sh  gen_ghdl.sh
macsim/: CMakeLists.txt  INSTALL  LICENSE  USAGE  macsim-seq.c
macsim/netrace/: netrace.c  netrace.h
macsim/src/: CMakeLists.txt  memory.c  memory.h  node.c  node.h  share.c  share.h  statistic.c  statistic.h  string_map.c  string_map.h
macsim/src/arch/: CMakeLists.txt  armv3.c  armv3.h  armv3_context.h  armv6m.c  armv6m.h  armv6m_context.h  riscv.c  riscv.h  riscv_context.h  rvmpb.c  rvmpb.h  trace.c  trace.h  trace_context.h  traffic.c  traffic.h  traffic_context.h
macsim/src/noc/: CMakeLists.txt  caerus.c  caerus.h  caerus_context.h  fixedlat.c  fixedlat.h  fixedlat_context.h  flitfifo.h  flitqueue.c  flitqueue.h  flitslotdelay.h  manhattan.c  manhattan.h  minbd.c  minbd.h  msgqueue.c  msgqueue.h  pbuffer.c  pbuffer.h  perfect.c  perfect.h  pnaa.c  pnaa.h  pnaa_context.h  pnbe0.c  pnbe0.h  pnbe0_context.h  pnbe1.c  pnbe1.h  pnbe1_context.h  pnbe2.c  pnbe2.h  pnbe2_context.h  pnconfig.c  pnconfig.h  pnjm0.c  pnjm0.h  pnoa.c  pnoa.h  pnoa0.c  (+6 more)
macsim/src/noc/one_to_one/: pnoo.c  pnoo.h  pnoo_bit_array.c  pnoo_bit_array.h  pnoo_context.c  pnoo_context.h  pnoo_event_queue.c  pnoo_event_queue.h  pnoo_events.c  pnoo_events.h  pnoo_helper.c  pnoo_helper.h  pnoo_msg.c  pnoo_msg.h  pnoo_recv_buffer.c  pnoo_recv_buffer.h  pnoo_timing.c  pnoo_timing.h
macsim/src/noc/one_to_one/events/: pnoo_events_barrier.c  pnoo_events_barrier.h  pnoo_events_rdy.c  pnoo_events_rdy.h  pnoo_events_recv.c  pnoo_events_recv.h  pnoo_events_send.c  pnoo_events_send.h
sw/: all_single_c_files.mk
sw/arch/: rv64i_toolchain.cmake
sw/benchmarks/: .gitignore  CODING  Makefile
sw/perf_bench/: .gitignore  CMakeLists.txt  README  configure.sh  run_all.sh
sw/perf_bench/scripts/: analyse_logs.sh  buildCombinedTable.sh  buildLatexNetworkGraph.sh  buildLatexPie.sh  buildLatexTable.sh  split_core.sh  split_instr.sh
sw/perf_bench/src/benchmark/app/: cg.c  kernel.c  matrix_multiplication.c  matrix_multiplication_tree.c  neural_network.c  neural_network_tree.c  ocean.c
sw/perf_bench/src/benchmark/misc/: data_stream_1.c  data_stream_2.c  data_stream_3.c  data_stream_4.c  max_throughput.c  single_throughput.c
sw/perf_bench/src/benchmark/mpi/: allgather.c  allgather_rowcol.c  allgather_tree.c  alltoall.c  alltoall_rowcol.c  barrier_hw.c  barrier_sw.c  bcast.c  gather.c  gather_tree.c  reduce.c  scatter.c  scatter_gather.c  scatter_tree.c
sw/perf_bench/src/benchmark/sort/: bitonic_sort.c  insertion_sort.c  merge_sort.c  odd_even_sort.c  odd_even_sort_block.c  quick_sort.c
sw/util/: .gitignore  CMakeLists.txt  README  configure.sh  run_tests.sh
sw/util/src/copper/: CMakeLists.txt  crt.S  debug.h  minimal.ld  randlc.h  random.c  random.h  syscalls.c
sw/util/src/gold/: CMakeLists.txt  mpi.h  mpi_allgather.c  mpi_allreduce.c  mpi_alltoall.c  mpi_alltoallv.c  mpi_barrier.c  mpi_bcast.c  mpi_comm.c  mpi_gather.c  mpi_gatherv.c  mpi_get_count.c  mpi_init.c  mpi_irecv.c  mpi_recv.c  mpi_reduce.c  mpi_scatter.c  mpi_scatterv.c  mpi_send.c  mpi_sendrecv.c  mpi_sendrecv_replace.c  mpi_transfer.c  mpi_transfer.h  mpi_wait.c
sw/util/src/silver/: CMakeLists.txt  fgmp.h  fgmp.s  fgmp_addr.h  fgmp_block.c  fgmp_block.h  fgmp_block.s  fgmp_block_16.s  fgmp_block_32.s
sw/util/src/tests/: CMakeLists.txt  minimal.ld  mpi_allgather_test.c  mpi_allreduce_test.c  mpi_alltoall_test.c  mpi_alltoallv_test.c  mpi_barrier_test.c  mpi_bcast_test.c  mpi_comm_test.c  mpi_gather_test.c  mpi_gatherv_test.c  mpi_reduce_test.c  mpi_scatter_test.c  mpi_send_irecv_test.c  mpi_sendrecv_replace_test.c
tests/accuracy/: .gitignore  Makefile  README  cmp.sh  cmp_multiple.sh  pnoo.mk  vcd2regdump.awk
tests/correctness/: .gitignore  test.sh
tools/: .gitignore  build_all.sh  config_default.mk
tools/accuracy/: README  build_benchmarks.sh  cmp4x4.sh  cmp4x4_one.sh  cmp_all.sh  cmp_many.sh  cmp_one.sh  vcd2regdump.awk
tools/install/: .gitignore  README  all.sh  build_ghdl.sh  build_riscv_gcc.sh  build_riscv_tools.sh  build_rv64ixfgmp.sh  fetch_and_build.sh  modify_fgmp.sh
tools/shexdump/: .gitignore  Makefile  shexdump.c
tools/vcd_parser/: .gitignore  CMakeLists.txt  README  configure.sh
tools/vhd_formater/: vhd_formater.sh
(+372 files in other folders)
